Updated static assets and added h1 h2 styling

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,8 +4,8 @@
 {% block blog %}[ blog ]{% endblock %}
 
 {% block content %}
-  <article class="cf ph3 ph6-m ph7-l pv5">
-    <header class="fn fl-ns w-50-ns pr4-ns mb3">
+  <article class="cf ph3 ph6-m ph7-l pv4">
+    <header class="mb2">
       <h1 class="f2 fw9 mb1 mt0">
         {{ post.title }}
       </h1>
