--- a/thingsimade/static/base/style.css
+++ b/thingsimade/static/base/style.css
@@ -60,7 +60,6 @@ pre, .codehilite span, code, table, td, th {
 
 code {
   border-radius: 2px;
-  color: #FF8000;
   padding: 2px;
 }
 
@@ -70,13 +69,13 @@ table {
   border-collapse: collapse;
   padding: 0;
   width: 100%;
-  color: #FF8000; }
+  color: #D8DEE9; }
   table tr {
-    background-color: #32302F;
+    background-color: #1B2B34;
     margin: 0;
     padding: 0; }
     table tr:nth-child(2n) {
-      background-color: #32302F; }
+      background-color: #1B2B34; }
     table tr th {
       font-weight: bold;
       text-align: left;
@@ -91,8 +90,7 @@ table {
     table tr th :last-child, table tr td :last-child {
       margin-bottom: 0; }
     table tr a {
-      color: #FF8000;
-      text-decoration: none;
+      color: #D8DEE9;
     }
 
 /* Contact */
@@ -116,72 +114,68 @@ h1 a {
 
 .codehilite { padding: 1em; background: #32302F; color: #ebdbb2; background-color: #32302F; }
 .codehilite pre, .codehilite p { margin: 0; }
-.codehilite .hll { background-color: #49483e }
-.codehilite .c { color: #75715e } /* Comment */
-.codehilite .err { color: #960050; background-color: #1e0010 } /* Error */
-.codehilite .k { color: #66d9ef } /* Keyword */
-.codehilite .l { color: #ae81ff } /* Literal */
-.codehilite .n { color: #f8f8f2 } /* Name */
-.codehilite .o { color: #f92672 } /* Operator */
-.codehilite .p { color: #f8f8f2 } /* Punctuation */
-.codehilite .ch { color: #75715e } /* Comment.Hashbang */
-.codehilite .cm { color: #75715e } /* Comment.Multiline */
-.codehilite .cp { color: #75715e } /* Comment.Preproc */
-.codehilite .cpf { color: #75715e } /* Comment.PreprocFile */
-.codehilite .c1 { color: #75715e } /* Comment.Single */
-.codehilite .cs { color: #75715e } /* Comment.Special */
-.codehilite .gd { color: #f92672 } /* Generic.Deleted */
+.codehilite .hll { background-color: #4F5B66 }
+.codehilite  { background: #1B2B34; color: #D8DEE9 }
+.codehilite .c { color: #65737E } /* Comment */
+.codehilite .err { color: #EC5f67 } /* Error */
+.codehilite .k { color: #C594C5 } /* Keyword */
+.codehilite .l { color: #F99157 } /* Literal */
+.codehilite .n { color: #D8DEE9 } /* Name */
+.codehilite .o { color: #5FB3B3 } /* Operator */
+.codehilite .p { color: #D8DEE9 } /* Punctuation */
+.codehilite .cm { color: #65737E } /* Comment.Multiline */
+.codehilite .cp { color: #65737E } /* Comment.Preproc */
+.codehilite .c1 { color: #65737E } /* Comment.Single */
+.codehilite .cs { color: #65737E } /* Comment.Special */
+.codehilite .gd { color: #EC5f67 } /* Generic.Deleted */
 .codehilite .ge { font-style: italic } /* Generic.Emph */
-.codehilite .gi { color: #a6e22e } /* Generic.Inserted */
+.codehilite .gh { color: #D8DEE9; font-weight: bold } /* Generic.Heading */
+.codehilite .gi { color: #99C794 } /* Generic.Inserted */
+.codehilite .gp { color: #65737E; font-weight: bold } /* Generic.Prompt */
 .codehilite .gs { font-weight: bold } /* Generic.Strong */
-.codehilite .gu { color: #75715e } /* Generic.Subheading */
-.codehilite .kc { color: #66d9ef } /* Keyword.Constant */
-.codehilite .kd { color: #66d9ef } /* Keyword.Declaration */
-.codehilite .kn { color: #f92672 } /* Keyword.Namespace */
-.codehilite .kp { color: #66d9ef } /* Keyword.Pseudo */
-.codehilite .kr { color: #66d9ef } /* Keyword.Reserved */
-.codehilite .kt { color: #66d9ef } /* Keyword.Type */
-.codehilite .ld { color: #e6db74 } /* Literal.Date */
-.codehilite .m { color: #ae81ff } /* Literal.Number */
-.codehilite .s { color: #e6db74 } /* Literal.String */
-.codehilite .na { color: #a6e22e } /* Name.Attribute */
-.codehilite .nb { color: #f8f8f2 } /* Name.Builtin */
-.codehilite .nc { color: #a6e22e } /* Name.Class */
-.codehilite .no { color: #66d9ef } /* Name.Constant */
-.codehilite .nd { color: #a6e22e } /* Name.Decorator */
-.codehilite .ni { color: #f8f8f2 } /* Name.Entity */
-.codehilite .ne { color: #a6e22e } /* Name.Exception */
-.codehilite .nf { color: #a6e22e } /* Name.Function */
-.codehilite .nl { color: #f8f8f2 } /* Name.Label */
-.codehilite .nn { color: #f8f8f2 } /* Name.Namespace */
-.codehilite .nx { color: #a6e22e } /* Name.Other */
-.codehilite .py { color: #f8f8f2 } /* Name.Property */
-.codehilite .nt { color: #f92672 } /* Name.Tag */
-.codehilite .nv { color: #f8f8f2 } /* Name.Variable */
-.codehilite .ow { color: #f92672 } /* Operator.Word */
-.codehilite .w { color: #f8f8f2 } /* Text.Whitespace */
-.codehilite .mb { color: #ae81ff } /* Literal.Number.Bin */
-.codehilite .mf { color: #ae81ff } /* Literal.Number.Float */
-.codehilite .mh { color: #ae81ff } /* Literal.Number.Hex */
-.codehilite .mi { color: #ae81ff } /* Literal.Number.Integer */
-.codehilite .mo { color: #ae81ff } /* Literal.Number.Oct */
-.codehilite .sa { color: #e6db74 } /* Literal.String.Affix */
-.codehilite .sb { color: #e6db74 } /* Literal.String.Backtick */
-.codehilite .sc { color: #e6db74 } /* Literal.String.Char */
-.codehilite .dl { color: #e6db74 } /* Literal.String.Delimiter */
-.codehilite .sd { color: #e6db74 } /* Literal.String.Doc */
-.codehilite .s2 { color: #e6db74 } /* Literal.String.Double */
-.codehilite .se { color: #ae81ff } /* Literal.String.Escape */
-.codehilite .sh { color: #e6db74 } /* Literal.String.Heredoc */
-.codehilite .si { color: #e6db74 } /* Literal.String.Interpol */
-.codehilite .sx { color: #e6db74 } /* Literal.String.Other */
-.codehilite .sr { color: #e6db74 } /* Literal.String.Regex */
-.codehilite .s1 { color: #e6db74 } /* Literal.String.Single */
-.codehilite .ss { color: #e6db74 } /* Literal.String.Symbol */
-.codehilite .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
-.codehilite .fm { color: #a6e22e } /* Name.Function.Magic */
-.codehilite .vc { color: #f8f8f2 } /* Name.Variable.Class */
-.codehilite .vg { color: #f8f8f2 } /* Name.Variable.Global */
-.codehilite .vi { color: #f8f8f2 } /* Name.Variable.Instance */
-.codehilite .vm { color: #f8f8f2 } /* Name.Variable.Magic */
-.codehilite .il { color: #ae81ff } /* Literal.Number.Integer.Long */
+.codehilite .gu { color: #5FB3B3; font-weight: bold } /* Generic.Subheading */
+.codehilite .kc { color: #C594C5 } /* Keyword.Constant */
+.codehilite .kd { color: #C594C5 } /* Keyword.Declaration */
+.codehilite .kn { color: #5FB3B3 } /* Keyword.Namespace */
+.codehilite .kp { color: #C594C5 } /* Keyword.Pseudo */
+.codehilite .kr { color: #C594C5 } /* Keyword.Reserved */
+.codehilite .kt { color: #FAC863 } /* Keyword.Type */
+.codehilite .ld { color: #99C794 } /* Literal.Date */
+.codehilite .m { color: #F99157 } /* Literal.Number */
+.codehilite .s { color: #99C794 } /* Literal.String */
+.codehilite .na { color: #6699CC } /* Name.Attribute */
+.codehilite .nb { color: #D8DEE9 } /* Name.Builtin */
+.codehilite .nc { color: #FAC863 } /* Name.Class */
+.codehilite .no { color: #EC5f67 } /* Name.Constant */
+.codehilite .nd { color: #5FB3B3 } /* Name.Decorator */
+.codehilite .ni { color: #D8DEE9 } /* Name.Entity */
+.codehilite .ne { color: #EC5f67 } /* Name.Exception */
+.codehilite .nf { color: #6699CC } /* Name.Function */
+.codehilite .nl { color: #D8DEE9 } /* Name.Label */
+.codehilite .nn { color: #FAC863 } /* Name.Namespace */
+.codehilite .nx { color: #6699CC } /* Name.Other */
+.codehilite .py { color: #D8DEE9 } /* Name.Property */
+.codehilite .nt { color: #5FB3B3 } /* Name.Tag */
+.codehilite .nv { color: #EC5f67 } /* Name.Variable */
+.codehilite .ow { color: #5FB3B3 } /* Operator.Word */
+.codehilite .w { color: #D8DEE9 } /* Text.Whitespace */
+.codehilite .mf { color: #F99157 } /* Literal.Number.Float */
+.codehilite .mh { color: #F99157 } /* Literal.Number.Hex */
+.codehilite .mi { color: #F99157 } /* Literal.Number.Integer */
+.codehilite .mo { color: #F99157 } /* Literal.Number.Oct */
+.codehilite .sb { color: #99C794 } /* Literal.String.Backtick */
+.codehilite .sc { color: #D8DEE9 } /* Literal.String.Char */
+.codehilite .sd { color: #65737E } /* Literal.String.Doc */
+.codehilite .s2 { color: #99C794 } /* Literal.String.Double */
+.codehilite .se { color: #F99157 } /* Literal.String.Escape */
+.codehilite .sh { color: #99C794 } /* Literal.String.Heredoc */
+.codehilite .si { color: #F99157 } /* Literal.String.Interpol */
+.codehilite .sx { color: #99C794 } /* Literal.String.Other */
+.codehilite .sr { color: #99C794 } /* Literal.String.Regex */
+.codehilite .s1 { color: #99C794 } /* Literal.String.Single */
+.codehilite .ss { color: #99C794 } /* Literal.String.Symbol */
+.codehilite .bp { color: #D8DEE9 } /* Name.Builtin.Pseudo */
+.codehilite .vc { color: #EC5f67 } /* Name.Variable.Class */
+.codehilite .vg { color: #EC5f67 } /* Name.Variable.Global */
+.codehilite .vi { color: #EC5f67 } /* Name.Variable.Instance */
+.codehilite .il { color: #F99157 } /* Literal.Number.Integer.Long */
