Cycled recaptcha keys and pulled them out into keys.ini since I should have really committed the private one :)

--- a/contact/templates/contact/form.html
+++ b/contact/templates/contact/form.html
@@ -29,7 +29,7 @@
     <small id="message-desc" class="f6 black-60">What's on your mind?</small>
   </div>
   <br />
-  <div class="g-recaptcha" data-sitekey="6LdtITYUAAAAAFY3REOkCUqynK0vWIYKYr9G804q"></div>
+  <div class="g-recaptcha" data-sitekey="{{ contact.recaptcha }}"></div>
   <br />
   <div class="mt3">
     <input class="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6" type="submit" value="Send 📨">
