--- a/stats/templates/stats/index.html
+++ b/stats/templates/stats/index.html
@@ -6,10 +6,10 @@
 {% block stats %}[ stats ]{% endblock %}
 
 {% block content %}
-    <!-- <article>
+    <article>
         <h2 class="f4 fw6">Recently listened</h2>
         <div class="cf pa2">
-            {% for album in albums %}
+            {% for _, album in albums.items %}
             <div class="fl w-50 w-25-m w-20-l pa2">
               <a href="{{ album.url }}" target="_blank" rel="noopener noreferrer" class="db link dim tc">
                 <img src="{{ album.cover }}" width="300px" class="w-100 db outline black-10"/>
@@ -21,7 +21,7 @@
             </div>
             {% endfor %}
         </div>
-    </article> -->
+    </article>
     <article>
         <h2 class="f4 fw6">Steam titles played in the last 2 weeks</h2>
         <div class="cf pa2">
