--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -7,6 +7,7 @@
         <meta name="theme-color" content="#317EFB" />
         <link href="{% static 'base/tachyons.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="{% static 'base/style.css' %}" type="text/css" rel="stylesheet" />
+        <link href="{% static 'base/prism.css' %}" type="text/css" rel="stylesheet" />
         {% block head %}
         {% endblock %}
     </head>
@@ -28,6 +29,7 @@
             {% block content %}
             {% endblock %}
         </section>
+        <script src="{% static 'base/prism.js' %}" type="text/javascript"></script>
         {% block foot %}
         {% endblock %}
     </body>
