--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -20,7 +20,7 @@
                 <a class="f6 fw6 hover-blue link mr2 dib" href="/" title="right back to the start">{% block home %}home{% endblock %}</a>
                 <!-- <a class="f6 fw6 hover-blue link mr2 dib" href="/projects" title="things i literally made">{% block projects %}projects{% endblock %}</a> -->
                 <a class="f6 fw6 hover-blue link mr2 dib" href="/blog" title="words and letters">{% block blog %}blog{% endblock %}</a>
-                <!-- <a class="f6 fw6 hover-blue link mr2 dib" href="/reviews" title="i think these are good opinions">{% block reviews %}reviews{% endblock %}</a> -->
+                <a class="f6 fw6 hover-blue link mr2 dib" href="/reviews" title="i think these are good opinions">{% block reviews %}reviews{% endblock %}</a>
                 <a class="f6 fw6 hover-blue link mr2 dib" href="/stats" title="see what i've been up to">{% block stats %}stats{% endblock %}</a>
                 <a class="f6 fw6 hover-blue link mr2 dib" href="/contact" title="get in touch!">{% block contact %}contact{% endblock %}</a>
             </div>
