--- a/reviews/templates/reviews/list.html
+++ b/reviews/templates/reviews/list.html
@@ -8,7 +8,7 @@
 {% block content %}
 <section class="pa3 pa4-m pa5-l">
   {% for review in reviews %}
-  	{{ review.title }} {{ review.date }}
+  	<img src="{{ review.cover }}" />
   {% empty %}
     <b class="db f4 mb1">No reviews have been written yet!</b>
   {% endfor %}
