--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -7,14 +7,14 @@
   <article class="cf ph3 ph6-m ph7-l pv4">
     <header class="mb2">
       <h1 class="f2 fw9 mb1 mt0">
-        Test
+        {{ post.title }}
       </h1>
       <time class="f6 ttu tracked gray">
-        Published
+        {{ post.date }}
       </time>
     </header>
     <div class="fn f6 fl-ns" id="content">
-      {{ post|safe }}
+      {{ post.content|safe }}
     </div>
   </article>
 {% endblock %}
