Mistune is up and running. Starting to form a directory structure

--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}test | utf9k{% endblock %}
+{% block title %}{{ post.title }} | utf9k{% endblock %}
+
+{% block nav %}utf9k{% endblock %}
 {% block blog %}[ blog ]{% endblock %}
 
 {% block content %}
