--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -8,7 +8,7 @@
 {% block content %}
 <section class="pa3 pa4-m pa5-l">
   {% for post in posts %}
-    <a class="f3 link b no-underline black dib ph2 pv1 {{ loop.cycle('hover-dark-blue', 'hover-blue', 'hover-light-blue', 'hover-green', 'hover-light-green', 'hover-yellow', 'hover-gold', 'hover-orange', 'hover-light-red', 'hover-red', 'hover-hot-pink', 'hover-pink', 'hover-light-purple', 'hover-purple') }}" href="{{ post.slug }}">
+    <a class="f3 link b no-underline black dib ph2 pv1 {{ loop.cycle('hover-dark-blue', 'hover-blue', 'hover-light-blue', 'hover-green', 'hover-light-green', 'hover-yellow', 'hover-gold', 'hover-orange', 'hover-light-red', 'hover-red', 'hover-hot-pink', 'hover-pink', 'hover-light-purple', 'hover-purple') }}" href="/blog/{{ post.slug }}">
       {{ post.title }}
     </a> //
   {% else %}
