Ported show stats over to tvdb

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -71,7 +71,7 @@
           {% for show in shows %}
           <div class="fl w-50 w-25-m w-20-l pa2">
             <a href="{{ show.link }}" target="_blank" rel="noopener noreferrer" class="db link dim tc">
-              <img src="{{ show.image }}" class="w-100 db outline black-10"/>
+              <img src="{{ show.image }}" height="143px" width="256px" class="w-100 db outline black-10"/>
               <dl class="mt2 f6 lh-copy">
                 <dd class="ml0 black truncate w-100">{{ show.name }}</dd>
                 <dd class="ml0 gray truncate w-100">{{ show.series }}</dd>
