--- a/templates/stats.html
+++ b/templates/stats.html
@@ -11,7 +11,7 @@
     <div class="cf pa2">
           {% for book in books %}
           <dl class="mt2 f6 lh-copy">
-            <dd class="ml0 black truncate w-100">{{ book.name }}</dd>
+            <dd class="ml0 black truncate w-100">{{ book.name }} by {{ book.author }}</dd>
           </dl>
     {% endfor %}
     </div>
