Added movies to the stats page

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -23,7 +23,7 @@
     <div class="cf pa2">
       {% for movie in movies %}
       <div class="fl w-50 w-25-m w-20-l pa2">
-        <a href="{{ movie.link }}" target="_blank" rel="noopener noreferrer" class="fl w-50 w-25-l link overflow-hidden hide-child">
+        <a href="{{ movie.link }}" target="_blank" rel="noopener noreferrer" class="link overflow-hidden hide-child">
           <img src="{{ movie.image }}" width="500px" class="w-100 db outline black-10">
           <dl class="mt2 f6 lh-copy">
                 <dd class="ml0 black truncate w-100">{{ movie.name }} ({{ movie.year }})</dd>
