--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 		<div class="pa3-ns pl3 pr3 pb3 pr3 db dtc-ns v-mid w-100 tl tr-ns mt2-ns mt0">
 			<a class="f6 fw6 hover-blue link mr2 dib" href="/" title="right back to the start">{% block home %}home{% endblock %}</a>
 			<a class="f6 fw6 hover-blue link mr2 dib" href="/blog" title="words and letters">{% block blog %}blog{% endblock %}</a>
+			<a class="f6 fw6 hover-blue link mr2 dib" href="/stats" title="104% accurate">{% block stats %}stats{% endblock %}</a>
 			<a class="f6 fw6 hover-blue link mr2 dib" href="/contact" title="get in touch!">{% block contact %}contact{% endblock %}</a>
 		</div>
 	</nav>
