--- a/templates/stats.html
+++ b/templates/stats.html
@@ -36,7 +36,7 @@
   <article>
       <h2 class="f4 fw6">🎵 music://last_heard</h2>
       <div class="cf pa2">
-          {% for song in songs %}
+          {% for song in music %}
           <div class="fl w-50 w-25-m w-20-l pa2">
             <a href="{{ song.link }}" target="_blank" rel="noopener noreferrer" class="db link dim tc">
               <img src="{{ song.image }}" width="300px" class="w-100 db outline black-10"/>
@@ -49,7 +49,7 @@
           {% endfor %}
       </div>
   </article>
-  <article>
+  <!-- <article>
       <h2 class="f4 fw6">🕹 steam://last_2_weeks</h2>
       <div class="cf pa2">
           {% for game in games %}
@@ -66,7 +66,7 @@
           <h2>I haven't played any steam games in the last 2 weeks :(</h2>
           {% endfor %}
       </div>
-  </article>
+  </article> -->
   <article>
       <h2 class="f4 fw6">📺 tv://last_watched</h2>
       <div class="cf pa2">
