Update deepfakes draft and updated base template

--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -3,8 +3,8 @@
 <head>
 	<title>{% block title %}{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='tachyons.min.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/tachyons.min.css') }}">
 </head>
 <body>
 	<nav class="db dt-ns mw9 center w-100">
