Inlined CSS and finished deepfakes post

--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -3,8 +3,10 @@
 <head>
 	<title>{% block title %}{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/tachyons.min.css') }}">
+	<style type="text/css">
+		{% include "css/style.css" %}
+		{% include "css/tachyons.min.css" %}
+	</style>
 </head>
 <body>
 	<nav class="db dt-ns mw9 center w-100">
