Alter grid width and default to 6 items per

--- a/site/templates/css/style.css
+++ b/site/templates/css/style.css
@@ -68,7 +68,12 @@ code {
   padding: 2px;
 }
 
-/* Tables (nicked from ()) */
+/* Stats grid */
+.gridcalc {
+  width: calc(100%/6);
+}
+
+/* Tables */
 
 table {
   border-collapse: collapse;
