--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -7,17 +7,17 @@
 
 {% block content %}
 <div class="f6 ph5 pv6 black-70">
-	<p>Oh, hello there!</p>
+	<p>Psst, hey you?</p>
 
-	<p>Don't just sit there, click something!</p>
+	<p>Yeah, you! I got some stuff on this here website you can check out</p>
 
-	<p>I can't click it for you, short of installing malware or something, haha.</p>
+	<p>Like writing? I've got a <a href="/blog">blog</a>. Videogames? I wrote some <a href="/reviews">reviews</a> years back. Fans of cool dashboards might like my <a href="/stats">stats</a> page. This whole thing is basically just a playground rather than a portfolio.</p>
 
-	<p>If you like videogames, maybe check out some old reviews or if you're more technologically inclined, check out some <a href="/projects">projects</a> or my <a href="/blog">blog</a>.</p>
+	<p>You can also see exactly how it's made <a href="https://github.com/marcus-crane/site">here</a> on Github!</p>
 
-	<p>You can also view the source code of this entire site <a href="https://github.com/marcus-crane/site">here</a> on Github!</p>
+	<p>What, did you expect 10MB+ of Javascript spaghetti? Heck no, this site has been put together with love :)</p>
 
-	<p>What, did you expect 10MB+ of Javascript spaghetti? Heck no, this site is made with love :)</p>
+	<p>Care is another story since some of the internals are a bit messy *cough* but it works so...</p>
 
 	<p>Enjoy!</p>
 </div>
