Fixed max width bug and stats should auto populate on startup

--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -10,7 +10,7 @@
 	</style>
 </head>
 <body>
-	<nav class="db dt-ns mw9 center w-100">
+	<nav class="db dt-ns center w-100">
 		<div class="pa3 pl3 db dtc-ns v-mid tl w-50">
 			<a class="link hover-hot-pink b f6 f5-ns dib">{% block nav %}{% endblock %}</a>
 		</div>
