Config to run on server as a trial

--- a/site/thingsimade/templates/shared/base.html
+++ b/site/thingsimade/templates/shared/base.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#F92672">
         
-        <link href="{% static "shared/css/tachyons.min.css" %}" rel="stylesheet" type="text/css" />
-        <link href="{% static "shared/css/oceanicnext.css" %}" rel="stylesheet" type="text/css" />
-        <link href="{% static "shared/css/style.css" %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'shared/css/tachyons.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'shared/css/oceanicnext.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'shared/css/style.css' %}" rel="stylesheet" type="text/css" />
         {% block head %}{% endblock %}
     </head>
     <body>
