--- a/site/stats/templates/stats/index.html
+++ b/site/stats/templates/stats/index.html
@@ -9,13 +9,25 @@
   <article>
     <h2 class="f4 fw6">📚 books://currently_reading</h2>
     <div class="cf pa2">
-          {% for book in books %}
-          <dl class="mt2 f6 lh-copy">
-            <dd class="ml0 black truncate w-100">
-              <a href="{{ book.link }}">{{ book.name }}</a> by {{ book.author }}
-            </dd>
-          </dl>
-    {% endfor %}
+      {% for book in books %}
+      <dl class="mt2 f6 lh-copy">
+        <dd class="ml0 black truncate w-100">
+          <a href="{{ book.link }}">{{ book.name }}</a> by {{ book.author }}
+        </dd>
+      </dl>
+      {% endfor %}
+    </div>
+  </article>
+  <article>
+    <h2 class="f4 fw6">🕹 games://currently_playing</h2>
+    <div class="cf pa2">
+      {% for game in games %}
+      <dl class="mt2 f6 lh-copy">
+        <dd class="ml0 black truncate w-100">
+          <a href="#">{{ game.name }}</a> on {{ game.platform }}
+        </dd>
+      </dl>
+      {% endfor %}
     </div>
   </article>
   <article>
