Removed unneeded utils, added table parser and changed blockquote parser

--- a/site/thingsimade/templates/404.html
+++ b/site/thingsimade/templates/404.html
@@ -5,6 +5,7 @@
 {% block nav %}you weren't meant to see this{% endblock %}
 
 {% block content %}
+<div class="container col-11 pushback">
   <div class="columns">
     <div class="column">
       <h1>Howdy stranger, <pre class="dib mt0 mb0">404 Page Not Found</pre>, huh?</h1>
@@ -13,4 +14,5 @@
       <p>You're welcome to try something else instead!</p>
     </div>
   </div>
+</div>
 {% endblock %}
