--- a/site/thingsimade/templates/500.html
+++ b/site/thingsimade/templates/500.html
@@ -6,6 +6,7 @@
 {% block navlink %}/{% endblock %}
 
 {% block content %}
+<div class="container col-11 pushback">
   <div class="columns">
     <div class="column">
       <h1>ERROR 500 server machine broke</h1>
@@ -13,4 +14,5 @@
       <p>I'd appreciate it if you give me a heads up via my <a href="/contact">contact</a> page</p>
     </div>
   </div>
+</div>
 {% endblock %}
